3B - update home-new-design

--- a/3B-WEB/NEW_DESIGN/home-new-design.html
+++ b/3B-WEB/NEW_DESIGN/home-new-design.html
@@ -675,30 +675,14 @@
 							<div class="store">
 								<div class="store-head">
 									<img class="store-img" src="../assets/images/store-logo.png">
-									<h3>Eshop <a href="#" class="pull-right">Xem Shop</a></h3>
+									<h3><span class="custom-wrap-1line">Eshop</span></h3>
+									<a href="#">Xem Shop</a>
 								</div>
 								<ul class="store-products">
-									<li>
-										<a href="#">
-											<img src="../assets/images/img29.jpg">
-											<div class="name custom-wrap-1line">Tên sản phẩm</div>
-											<div class="price">125.000 đ</div>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<img src="../assets/images/img29.jpg">
-											<div class="name custom-wrap-1line">Tên sản phẩm dài cực là dài</div>
-											<div class="price">125.000 đ</div>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<img src="../assets/images/img29.jpg">
-											<div class="name custom-wrap-1line">Tên sản phẩm quá là dài dài luôn</div>
-											<div class="price">125.000 đ</div>
-										</a>
-									</li>
+									<li><a href="#"><img src="../assets/images/img30.jpg"></a></li>
+									<li><a href="#"><img src="../assets/images/img29.jpg"></a></li>
+									<li><a href="#"><img src="../assets/images/img30.jpg"></a></li>
+									<li><a href="#"><img src="../assets/images/img29.jpg"><span>+126</span></a></li>
 								</ul>
 							</div>
 						</div>
@@ -706,30 +690,14 @@
 							<div class="store">
 								<div class="store-head">
 									<img class="store-img" src="../assets/images/store-logo.png">
-									<h3><span class="custom-wrap-1line">Tên Shop này đặt ra rất là dài chỉ để test</span> <a href="#">Xem Shop</a></h3>
+									<h3><span class="custom-wrap-1line">Tên Shop này đặt ra rất là dài chỉ để test</span></h3>
+									<a href="#">Xem Shop</a>
 								</div>
 								<ul class="store-products">
-									<li>
-										<a href="#">
-											<img src="../assets/images/img29.jpg">
-											<div class="name custom-wrap-1line">Tên sản phẩm</div>
-											<div class="price">125.000 đ</div>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<img src="../assets/images/img29.jpg">
-											<div class="name custom-wrap-1line">Tên sản phẩm dài cực là dài</div>
-											<div class="price">125.000 đ</div>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<img src="../assets/images/img30.jpg">
-											<div class="name custom-wrap-1line">Tên sản phẩm quá là dài dài luôn</div>
-											<div class="price">125.000 đ</div>
-										</a>
-									</li>
+									<li><a href="#"><img src="../assets/images/img30.jpg"></a></li>
+									<li><a href="#"><img src="../assets/images/img29.jpg"></a></li>
+									<li><a href="#"><img src="../assets/images/img30.jpg"></a></li>
+									<li><a href="#"><img src="../assets/images/img29.jpg"><span>+126</span></a></li>
 								</ul>
 							</div>
 						</div>
@@ -737,30 +705,14 @@
 							<div class="store">
 								<div class="store-head">
 									<img class="store-img" src="../assets/images/store-logo.png">
-									<h3><span class="custom-wrap-1line">Tên Shop này đặt ra rất là dài chỉ để test</span> <a href="#">Xem Shop</a></h3>
+									<h3><span class="custom-wrap-1line">Tên Shop này đặt ra rất là dài chỉ để test</span></h3>
+									<a href="#">Xem Shop</a>
 								</div>
 								<ul class="store-products">
-									<li>
-										<a href="#">
-											<img src="../assets/images/img30.jpg">
-											<div class="name custom-wrap-1line">Tên sản phẩm</div>
-											<div class="price">125.000 đ</div>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<img src="../assets/images/img29.jpg">
-											<div class="name custom-wrap-1line">Tên sản phẩm dài cực là dài</div>
-											<div class="price">125.000 đ</div>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<img src="../assets/images/img30.jpg">
-											<div class="name custom-wrap-1line">Tên sản phẩm quá là dài dài luôn</div>
-											<div class="price">125.000 đ</div>
-										</a>
-									</li>
+									<li><a href="#"><img src="../assets/images/img30.jpg"></a></li>
+									<li><a href="#"><img src="../assets/images/img29.jpg"></a></li>
+									<li><a href="#"><img src="../assets/images/img30.jpg"></a></li>
+									<li><a href="#"><img src="../assets/images/img29.jpg"><span>+126</span></a></li>
 								</ul>
 							</div>
 						</div>
