3B - update admin-product-list add field SKU

--- a/3B-NEW/admin-product-list.html
+++ b/3B-NEW/admin-product-list.html
@@ -410,7 +410,10 @@
 											<input type="text" name="product-name" class="form-control" placeholder="Theo username">
 										</div>
 										<div class="col-md-6 margin-b">
-											<input type="text" id="product-name" name="product-name" class="form-control" placeholder="Theo số điện thoại">
+											<input type="text" name="product-name" class="form-control" placeholder="Theo số điện thoại">
+										</div>
+										<div class="col-md-6 margin-b">
+											<input type="text" name="product-name" class="form-control" placeholder="Tìm theo SKU">
 										</div>
 
 										<div class="col-md-2 margin-b">
