3B - update seller-profile

--- a/3B-NEW/seller-profile.html
+++ b/3B-NEW/seller-profile.html
@@ -359,65 +359,6 @@
 									<div class="tab-pane" id="tab_2">
 
 										<div class="row">
-											<!-- BEGIN PERFOMANCE -->
-											<div class="col-md-6">
-												<div class="row">
-													<div class="col-md-12"><h5>Products</h5></div>
-													<div class="col-md-6">
-														<div class="perfomance-block">
-															<label>Sản phẩm</label>
-															<p>48 <span class="pull-right"><img class="icons-svg" src="assets/images/svg/arrow-up.svg"></span></p>
-														</div>
-													</div>
-													<div class="col-md-6">
-														<div class="perfomance-block">
-															<label>Đánh giá tích cực</label>
-															<p>90% <span class="pull-right"><img class="icons-svg" src="assets/images/svg/arrow-up.svg"></span></p>
-														</div>
-													</div>
-													<div class="col-md-6">
-														<div class="perfomance-block">
-															<label>Tỉ lệ trả lại</label>
-															<p>4.00% <span class="pull-right"><img class="icons-svg" src="assets/images/svg/arrow-down.svg"></span></p>
-														</div>
-													</div>
-													<div class="col-md-6">
-														<div class="perfomance-block">
-															<label>Tốc độ chuẩn bị</label>
-															<p>2 - 3 days </p>
-														</div>
-													</div>
-												</div>
-												<div class="row">
-													<div class="col-md-12"><h5>Chat</h5></div>
-													<div class="col-md-6">
-														<div class="perfomance-block">
-															<label>Tỉ lệ phản hồi</label>
-															<p>65% <span class="pull-right"><img class="icons-svg" src="assets/images/svg/arrow-up.svg"></span></p>
-														</div>
-													</div>
-													<div class="col-md-6">
-														<div class="perfomance-block">
-															<label>Thời gian phản hồi</label>
-															<p>trong vài giờ</p>
-														</div>
-													</div>
-													<div class="col-md-6">
-														<div class="perfomance-block">
-															<label>Đánh giá phản hồi</label>
-															<p>76% <span class="pull-right"><img class="icons-svg" src="assets/images/svg/arrow-up.svg"></span></p>
-														</div>
-													</div>
-													<div class="col-md-6">
-														<div class="perfomance-block">
-															<label>Cuộc hội thoại</label>
-															<p>162 <span class="pull-right"><img class="icons-svg" src="assets/images/svg/arrow-up.svg"></span></p>
-														</div>
-													</div>
-												</div>
-											</div>
-											<!-- /END PERFOMANCE -->
-
 											<!-- BEGIN OVERVIEW -->
 											<div class="col-md-6">
 												<div class="box-widget">
@@ -451,12 +392,7 @@
 															</li>
 															<li>
 																<div class="stack-block">
-																	<i class="fa fa-commenting-o"></i> Tỉ lệ phản hồi <span class="pull-right badge bg-green">31%</span>
-																</div>
-															</li>
-															<li>
-																<div class="stack-block">
-																	<i class="fa fa-clock-o"></i> Thời gian phản hồi <span class="pull-right badge bg-green">khoảng vài giờ</span>
+																	<i class="fa fa-shopping-bag"></i> Số sản phẩm <span class="pull-right badge bg-green">3100</span>
 																</div>
 															</li>
 															<li>
@@ -472,6 +408,11 @@
 															<li>
 																<div class="stack-block">
 																	<i class="fa fa-cubes"></i> Tỉ lệ thành công đơn hàng <span class="pull-right badge bg-green">4.00%</span>
+																</div>
+															</li>
+															<li>
+																<div class="stack-block">
+																	<i class="fa fa-reply"></i> Tỉ lệ trả lại hàng <span class="pull-right badge bg-green">40.00%</span>
 																</div>
 															</li>
 														</ul>
