3B - update seller-profile + store-home

--- a/3B-NEW/seller-profile.html
+++ b/3B-NEW/seller-profile.html
@@ -407,7 +407,7 @@
 															</li>
 															<li>
 																<div class="stack-block">
-																	<i class="fa fa-cubes"></i> Tỉ lệ thành công đơn hàng <span class="pull-right badge bg-green">4.00%</span>
+																	<i class="fa fa-cubes"></i> Tỉ lệ đơn hàng không thành công <span class="pull-right badge bg-green">4.00%</span>
 																</div>
 															</li>
 															<li>
