--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -21,7 +21,7 @@
 	<div class="wrapper" style="width:90%;margin:50px auto;">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-6">
+				<div class="col-md-4">
 					<h1>OLD DESIGN</h1>
 					<div class="search">
 						<h5>SEARCH</h5>
@@ -95,14 +95,20 @@
 						</ul>
 					</div>
 				</div>
-				<div class="col-md-6">
-					<h1>NEW DESIGN</h1>
+				<div class="col-md-4">
+					<h1>NEW DESIGN - PC</h1>
 					<ul>
 						<li><a href="NEW_DESIGN/pc/home.html">Home</a></li>
 						<!-- <li><a href="NEW_DESIGN/store-home.html">Store Home</a></li>
 						<li><a href="NEW_DESIGN/shopping-cart.html">Shopping Cart</a></li>
 						<li><a href="NEW_DESIGN/view-product-by-category.html">View Product By Category</a></li>
 						<li><a href="NEW_DESIGN/outlet.html">Outlet</a></li> -->
+					</ul>
+				</div>
+				<div class="col-md-4">
+					<h1>NEW DESIGN - SP</h1>
+					<ul>
+						<li><a href="NEW_DESIGN/mobile/home.html">Home</a></li>
 					</ul>
 				</div>
 				<div class="clearfix"></div>
