3B - update home new design - pc

--- a/3B-WEB/NEW_DESIGN/mobile/home.html
+++ b/3B-WEB/NEW_DESIGN/mobile/home.html
@@ -705,7 +705,7 @@
 		</footer>
 		<!-- /END FOOTER -->
 
-		<div class="menu-bot fixed">
+		<div class="menu-bot fixed container">
 			<ul>
 				<li>
 					<a href="../../index.html">
