--- a/3B-WEB/NEW_DESIGN/pc/home.html
+++ b/3B-WEB/NEW_DESIGN/pc/home.html
@@ -1039,7 +1039,7 @@
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
-									<span class="p-price">1.125.000 đ</span>
+									<span class="p-price">1,189,000đ - 2,195,000đ</span>
 								</div>
 								<div class="rating">
 									<img src="../../assets/images/new-design/icons/star.png">
@@ -1093,7 +1093,7 @@
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ</h4></a>
-									<span class="p-price">1.125.000 đ</span>
+									<span class="p-price">100,189,000đ - 200,195,000đ</span>
 								</div>
 								<div class="rating">
 									<img src="../../assets/images/new-design/icons/star.png">
