3B - update home new design - PC

--- a/3B-WEB/NEW_DESIGN/pc/home.html
+++ b/3B-WEB/NEW_DESIGN/pc/home.html
@@ -1022,12 +1022,13 @@
 				<div class="head-title">
 					<h3 class="txt_upercase"><img class="width-24" src="../../assets/images/new-design/icons/idea.png"> Gợi ý hôm nay</h3>
 				</div>
-				<div class="row">
-					<div class="col-5 col-sm-4 col-xs-6">
+				<div class="row margin-b20">
+					<div class="col-md-2 col-sm-4 col-xs-6">
 						<!-- PRODUCT ITEM -->
 						<div class="p-item">
 							<div class="p-image">
 								<a href="#"><img src="../../assets/images/img29.jpg"></a>
+								<span class="rating-label">-50%</span>
 							</div>
 							<div class="p-meta">
 								<div class="store-info">
@@ -1035,11 +1036,10 @@
 										<img src="../../assets/images/img30.jpg">
 										<h5 class="wrap-line">Clever Hippo cùng cái tên siêu dài</h5>
 									</div>
-									<span class="rating-label">-50%</span>
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
-									<span class="p-price">1,189,000đ - 2,195,000đ</span>
+									<span class="p-price wrap-line">1,189,000đ - 2,195,000đ</span>
 								</div>
 								<div class="rating">
 									<img src="../../assets/images/new-design/icons/star.png">
@@ -1050,11 +1050,12 @@
 						</div>
 						<!-- /END PRODUCT ITEM -->
 					</div>
-					<div class="col-5 col-sm-4 col-xs-6">
+					<div class="col-md-2 col-sm-4 col-xs-6">
 						<!-- PRODUCT ITEM -->
 						<div class="p-item">
 							<div class="p-image">
 								<a href="#"><img src="../../assets/images/img30.jpg"></a>
+								<span class="rating-label">-50%</span>
 							</div>
 							<div class="p-meta">
 								<div class="store-info">
@@ -1062,11 +1063,10 @@
 										<img src="../../assets/images/img29.jpg">
 										<h5 class="wrap-line">Tên cửa hàng</h5>
 									</div>
-									<span class="rating-label">-50%</span>
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
-									<span class="p-price">122.125.000 đ</span>
+									<span class="p-price wrap-line">122.125.000 đ</span>
 								</div>
 								<div class="rating">
 									<img src="../../assets/images/new-design/icons/star.png">
@@ -1077,11 +1077,12 @@
 						</div>
 						<!-- /END PRODUCT ITEM -->
 					</div>
-					<div class="col-5 col-sm-4 col-xs-6">
+					<div class="col-md-2 col-sm-4 col-xs-6">
 						<!-- PRODUCT ITEM -->
 						<div class="p-item">
 							<div class="p-image">
 								<a href="#"><img src="../../assets/images/img6.png"></a>
+								<span class="rating-label">-50%</span>
 							</div>
 							<div class="p-meta">
 								<div class="store-info">
@@ -1089,11 +1090,10 @@
 										<img src="../../assets/images/store-logo.png">
 										<h5 class="wrap-line">Tên cửa hàng siêu ngắn</h5>
 									</div>
-									<span class="rating-label">-50%</span>
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ</h4></a>
-									<span class="p-price">100,189,000đ - 200,195,000đ</span>
+									<span class="p-price wrap-line">100,189,000đ - 200,195,000đ</span>
 								</div>
 								<div class="rating">
 									<img src="../../assets/images/new-design/icons/star.png">
@@ -1104,11 +1104,12 @@
 						</div>
 						<!-- /END PRODUCT ITEM -->
 					</div>
-					<div class="col-5 col-sm-4 col-xs-6">
+					<div class="col-md-2 col-sm-4 col-xs-6">
 						<!-- PRODUCT ITEM -->
 						<div class="p-item">
 							<div class="p-image">
 								<a href="#"><img src="../../assets/images/img9.png"></a>
+								<span class="rating-label">-50%</span>
 							</div>
 							<div class="p-meta">
 								<div class="store-info">
@@ -1116,7 +1117,6 @@
 										<img src="../../assets/images/store-logo.png">
 										<h5 class="wrap-line">Tên</h5>
 									</div>
-									<span class="rating-label">-50%</span>
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ dài</h4></a>
@@ -1131,11 +1131,12 @@
 						</div>
 						<!-- /END PRODUCT ITEM -->
 					</div>
-					<div class="col-5 col-sm-4 col-xs-6">
+					<div class="col-md-2 col-sm-4 col-xs-6">
 						<!-- PRODUCT ITEM -->
 						<div class="p-item">
 							<div class="p-image">
 								<a href="#"><img src="../../assets/images/img10.png"></a>
+								<span class="rating-label">-50%</span>
 							</div>
 							<div class="p-meta">
 								<div class="store-info">
@@ -1143,11 +1144,10 @@
 										<img src="../../assets/images/store-logo.png">
 										<h5 class="wrap-line">Superrrr</h5>
 									</div>
-									<span class="rating-label">-50%</span>
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Tên khác nhưng dài vừa vừa</h4></a>
-									<span class="p-price">10.125.000 đ</span>
+									<span class="p-price wrap-line">100,189,000đ - 200,195,000đ</span>
 								</div>
 								<div class="rating">
 									<img src="../../assets/images/new-design/icons/star.png">
@@ -1158,11 +1158,12 @@
 						</div>
 						<!-- /END PRODUCT ITEM -->
 					</div>
-					<div class="col-5 col-sm-4 col-xs-6">
+					<div class="col-md-2 col-sm-4 col-xs-6">
 						<!-- PRODUCT ITEM -->
 						<div class="p-item">
 							<div class="p-image">
 								<a href="#"><img src="../../assets/images/img12.png"></a>
+								<span class="rating-label">-50%</span>
 							</div>
 							<div class="p-meta">
 								<div class="store-info">
@@ -1170,11 +1171,10 @@
 										<img src="../../assets/images/store-logo.png">
 										<h5 class="wrap-line">Superrrr Saleeeee</h5>
 									</div>
-									<span class="rating-label">-50%</span>
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Tên khác nhưng dài vừa vừa</h4></a>
-									<span class="p-price">125.000 đ</span>
+									<span class="p-price wrap-line">125.000 đ</span>
 								</div>
 								<div class="rating">
 									<img src="../../assets/images/new-design/icons/star.png">
@@ -1185,11 +1185,12 @@
 						</div>
 						<!-- /END PRODUCT ITEM -->
 					</div>
-					<div class="col-5 col-sm-4 col-xs-6">
+					<div class="col-md-2 col-sm-4 col-xs-6">
 						<!-- PRODUCT ITEM -->
 						<div class="p-item">
 							<div class="p-image">
 								<a href="#"><img src="../../assets/images/img30.jpg"></a>
+								<span class="rating-label">-50%</span>
 							</div>
 							<div class="p-meta">
 								<div class="store-info">
@@ -1197,7 +1198,60 @@
 										<img src="../../assets/images/img29.jpg">
 										<h5 class="wrap-line">Tên cửa hàng</h5>
 									</div>
-									<span class="rating-label">-50%</span>
+								</div>
+								<div class="p-name">
+									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
+									<span class="p-price wrap-line">122.125.000 đ</span>
+								</div>
+								<div class="rating">
+									<img src="../../assets/images/new-design/icons/star.png">
+									<span class="point">4.0</span>
+									<span class="count">(200 ratings)</span>
+								</div>
+							</div>
+						</div>
+						<!-- /END PRODUCT ITEM -->
+					</div>
+					<div class="col-md-2 col-sm-4 col-xs-6">
+						<!-- PRODUCT ITEM -->
+						<div class="p-item">
+							<div class="p-image">
+								<a href="#"><img src="../../assets/images/img30.jpg"></a>
+								<span class="rating-label">-50%</span>
+							</div>
+							<div class="p-meta">
+								<div class="store-info">
+									<div class="store-name">
+										<img src="../../assets/images/img29.jpg">
+										<h5 class="wrap-line">Tên cửa hàng</h5>
+									</div>
+								</div>
+								<div class="p-name">
+									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
+									<span class="p-price wrap-line">122.125.000 đ</span>
+								</div>
+								<div class="rating">
+									<img src="../../assets/images/new-design/icons/star.png">
+									<span class="point">4.0</span>
+									<span class="count">(200 ratings)</span>
+								</div>
+							</div>
+						</div>
+						<!-- /END PRODUCT ITEM -->
+					</div>
+					<div class="col-md-2 col-sm-4 col-xs-6">
+						<!-- PRODUCT ITEM -->
+						<div class="p-item">
+							<div class="p-image">
+								<a href="#"><img src="../../assets/images/img30.jpg"></a>
+								<span class="rating-label">-50%</span>
+							</div>
+							<div class="p-meta">
+								<div class="store-info">
+									<div class="store-name">
+										<img src="../../assets/images/img29.jpg">
+										<h5 class="wrap-line wrap-line">Tên cửa hàng</h5>
+									</div>
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
@@ -1212,11 +1266,12 @@
 						</div>
 						<!-- /END PRODUCT ITEM -->
 					</div>
-					<div class="col-5 col-sm-4 col-xs-6">
+					<div class="col-md-2 col-sm-4 col-xs-6">
 						<!-- PRODUCT ITEM -->
 						<div class="p-item">
 							<div class="p-image">
 								<a href="#"><img src="../../assets/images/img30.jpg"></a>
+								<span class="rating-label">-50%</span>
 							</div>
 							<div class="p-meta">
 								<div class="store-info">
@@ -1224,7 +1279,6 @@
 										<img src="../../assets/images/img29.jpg">
 										<h5 class="wrap-line">Tên cửa hàng</h5>
 									</div>
-									<span class="rating-label">-50%</span>
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
@@ -1239,11 +1293,12 @@
 						</div>
 						<!-- /END PRODUCT ITEM -->
 					</div>
-					<div class="col-5 col-sm-4 col-xs-6">
+					<div class="col-md-2 col-sm-4 col-xs-6">
 						<!-- PRODUCT ITEM -->
 						<div class="p-item">
 							<div class="p-image">
 								<a href="#"><img src="../../assets/images/img30.jpg"></a>
+								<span class="rating-label">-50%</span>
 							</div>
 							<div class="p-meta">
 								<div class="store-info">
@@ -1251,7 +1306,6 @@
 										<img src="../../assets/images/img29.jpg">
 										<h5 class="wrap-line">Tên cửa hàng</h5>
 									</div>
-									<span class="rating-label">-50%</span>
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
@@ -1266,11 +1320,12 @@
 						</div>
 						<!-- /END PRODUCT ITEM -->
 					</div>
-					<div class="col-5 col-sm-4 col-xs-6">
+					<div class="col-md-2 col-sm-4 col-xs-6">
 						<!-- PRODUCT ITEM -->
 						<div class="p-item">
 							<div class="p-image">
 								<a href="#"><img src="../../assets/images/img30.jpg"></a>
+								<span class="rating-label">-50%</span>
 							</div>
 							<div class="p-meta">
 								<div class="store-info">
@@ -1278,7 +1333,6 @@
 										<img src="../../assets/images/img29.jpg">
 										<h5 class="wrap-line">Tên cửa hàng</h5>
 									</div>
-									<span class="rating-label">-50%</span>
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
@@ -1293,11 +1347,12 @@
 						</div>
 						<!-- /END PRODUCT ITEM -->
 					</div>
-					<div class="col-5 col-sm-4 col-xs-6">
+					<div class="col-md-2 col-sm-4 col-xs-6">
 						<!-- PRODUCT ITEM -->
 						<div class="p-item">
 							<div class="p-image">
 								<a href="#"><img src="../../assets/images/img30.jpg"></a>
+								<span class="rating-label">-50%</span>
 							</div>
 							<div class="p-meta">
 								<div class="store-info">
@@ -1305,7 +1360,6 @@
 										<img src="../../assets/images/img29.jpg">
 										<h5 class="wrap-line">Tên cửa hàng</h5>
 									</div>
-									<span class="rating-label">-50%</span>
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
@@ -1320,11 +1374,12 @@
 						</div>
 						<!-- /END PRODUCT ITEM -->
 					</div>
-					<div class="col-5 col-sm-4 col-xs-6">
+					<div class="col-md-2 col-sm-4 col-xs-6">
 						<!-- PRODUCT ITEM -->
 						<div class="p-item">
 							<div class="p-image">
 								<a href="#"><img src="../../assets/images/img30.jpg"></a>
+								<span class="rating-label">-50%</span>
 							</div>
 							<div class="p-meta">
 								<div class="store-info">
@@ -1332,7 +1387,6 @@
 										<img src="../../assets/images/img29.jpg">
 										<h5 class="wrap-line">Tên cửa hàng</h5>
 									</div>
-									<span class="rating-label">-50%</span>
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
@@ -1347,11 +1401,12 @@
 						</div>
 						<!-- /END PRODUCT ITEM -->
 					</div>
-					<div class="col-5 col-sm-4 col-xs-6">
+					<div class="col-md-2 col-sm-4 col-xs-6">
 						<!-- PRODUCT ITEM -->
 						<div class="p-item">
 							<div class="p-image">
 								<a href="#"><img src="../../assets/images/img30.jpg"></a>
+								<span class="rating-label">-50%</span>
 							</div>
 							<div class="p-meta">
 								<div class="store-info">
@@ -1359,61 +1414,6 @@
 										<img src="../../assets/images/img29.jpg">
 										<h5 class="wrap-line">Tên cửa hàng</h5>
 									</div>
-									<span class="rating-label">-50%</span>
-								</div>
-								<div class="p-name">
-									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
-									<span class="p-price">122.125.000 đ</span>
-								</div>
-								<div class="rating">
-									<img src="../../assets/images/new-design/icons/star.png">
-									<span class="point">4.0</span>
-									<span class="count">(200 ratings)</span>
-								</div>
-							</div>
-						</div>
-						<!-- /END PRODUCT ITEM -->
-					</div>
-					<div class="col-5 col-sm-4 col-xs-6">
-						<!-- PRODUCT ITEM -->
-						<div class="p-item">
-							<div class="p-image">
-								<a href="#"><img src="../../assets/images/img30.jpg"></a>
-							</div>
-							<div class="p-meta">
-								<div class="store-info">
-									<div class="store-name">
-										<img src="../../assets/images/img29.jpg">
-										<h5 class="wrap-line">Tên cửa hàng</h5>
-									</div>
-									<span class="rating-label">-50%</span>
-								</div>
-								<div class="p-name">
-									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
-									<span class="p-price">122.125.000 đ</span>
-								</div>
-								<div class="rating">
-									<img src="../../assets/images/new-design/icons/star.png">
-									<span class="point">4.0</span>
-									<span class="count">(200 ratings)</span>
-								</div>
-							</div>
-						</div>
-						<!-- /END PRODUCT ITEM -->
-					</div>
-					<div class="col-5 col-sm-4 col-xs-6">
-						<!-- PRODUCT ITEM -->
-						<div class="p-item">
-							<div class="p-image">
-								<a href="#"><img src="../../assets/images/img30.jpg"></a>
-							</div>
-							<div class="p-meta">
-								<div class="store-info">
-									<div class="store-name">
-										<img src="../../assets/images/img29.jpg">
-										<h5 class="wrap-line">Tên cửa hàng</h5>
-									</div>
-									<span class="rating-label">-50%</span>
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
@@ -1434,6 +1434,20 @@
 						<button class="btn btn-loadmore">Xem thêm</button>
 					</div>
 				</div>
+
+				<div class="head-title">
+					<h3 class="txt_upercase">Các thương hiệu</h3>
+					<a href="#">Xem thêm</a>
+				</div>
+
+				<ul class="owl-carousel brands margin-b50">
+					<li class="item"><img src="../../assets/images/brands/canon.png"></li>
+					<li class="item"><img src="../../assets/images/brands/samsung.png"></li>
+					<li class="item"><img src="../../assets/images/brands/adidas.png"></li>
+					<li class="item"><img src="../../assets/images/brands/nike.png"></li>
+					<li class="item"><img src="../../assets/images/brands/puma.png"></li>
+					<li class="item"><img src="../../assets/images/brands/loreal.png"></li>
+				</ul>
 			</div>
 		</div>
 		<!-- /END RECOMMEND PRODUCTS TODAY -->
