3B - update home new design - PC

--- a/3B-WEB/NEW_DESIGN/pc/home.html
+++ b/3B-WEB/NEW_DESIGN/pc/home.html
@@ -1020,9 +1020,23 @@
 		<div class="recommend-products margin-b20">
 			<div class="content-wrapper bg-white pad-20 br-8 container">
 				<div class="head-title">
+					<h3 class="txt_upercase">Các thương hiệu</h3>
+					<a href="#">Xem tất cả <i class="fa fa-angle-right"></i></a>
+				</div>
+
+				<ul class="owl-carousel brands">
+					<li class="item"><img src="../../assets/images/brands/canon.png"></li>
+					<li class="item"><img src="../../assets/images/brands/samsung.png"></li>
+					<li class="item"><img src="../../assets/images/brands/adidas.png"></li>
+					<li class="item"><img src="../../assets/images/brands/nike.png"></li>
+					<li class="item"><img src="../../assets/images/brands/puma.png"></li>
+					<li class="item"><img src="../../assets/images/brands/loreal.png"></li>
+				</ul>
+
+				<div class="head-title padding-t30">
 					<h3 class="txt_upercase"><img class="width-24" src="../../assets/images/new-design/icons/idea.png"> Gợi ý hôm nay</h3>
 				</div>
-				<div class="row margin-b20">
+				<div class="row">
 					<div class="col-md-2 col-sm-4 col-xs-6">
 						<!-- PRODUCT ITEM -->
 						<div class="p-item">
@@ -1434,20 +1448,6 @@
 						<button class="btn btn-loadmore">Xem thêm</button>
 					</div>
 				</div>
-
-				<div class="head-title">
-					<h3 class="txt_upercase">Các thương hiệu</h3>
-					<a href="#">Xem thêm</a>
-				</div>
-
-				<ul class="owl-carousel brands margin-b50">
-					<li class="item"><img src="../../assets/images/brands/canon.png"></li>
-					<li class="item"><img src="../../assets/images/brands/samsung.png"></li>
-					<li class="item"><img src="../../assets/images/brands/adidas.png"></li>
-					<li class="item"><img src="../../assets/images/brands/nike.png"></li>
-					<li class="item"><img src="../../assets/images/brands/puma.png"></li>
-					<li class="item"><img src="../../assets/images/brands/loreal.png"></li>
-				</ul>
 			</div>
 		</div>
 		<!-- /END RECOMMEND PRODUCTS TODAY -->
